All_Component_DX/force-app/main/default/objects/ANA_OAuth_Settings__c/ANA_OAuth_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the OAuth2 Settings for accessing the Analytics Rest Services</description>
    <label>ANA OAuth Settings</label>
</CustomObject>