All_Component_DX/force-app/main/default/objects/ANA_OAuth_Settings__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>