All_Component_DX/force-app/main/default/objects/ANA_OAuth_Settings__c/fields/OAuth_URL__c.field-meta.xml
<CustomField>
    <fullName>OAuth_URL__c</fullName>
    <label>OAuth URL</label>
    <type>Url</type>
</CustomField>