All_Component_DX/force-app/main/default/objects/ANA_OAuth_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>